Refactor and expand animal and fungi test suites
Consolidated Bear tests into a single file, removing BearTest2.java. Expanded and refactored test suites for Bear, Carcass, Deer, Fungi, Rabbit, and Wolf to use more realistic world and actor setups, added new behavioral and interaction tests, and improved test clarity and coverage. Tests now use Program and World consistently, and cover more edge cases and interactions between animals and environment.